# PredictLine

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.lock.txt  requirements.txt
data/: sample_synthetic.csv
src/: api.py  cross_dataset_eval.py  data_pipeline.py  train.py  train_real_cisco.py
src/adapters/: cisco_adapter.py  telecomts_adapter.py
src/models/: gru_model.py  threshold_baseline.py
tests/: test_cisco_adapter.py  test_cross_dataset_eval.py  test_data_pipeline.py
